--- a/style.css
+++ b/style.css
@@ -1,3 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap');
+
 body {
-    background-color: antiquewhite;
+    padding-top: 130px;
+    background: linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);
+  }
+  @media (max-width: 979px) {
+    body {
+      padding-top: 130px;
+    }
+  }
+
+.navbar{
+    width: 100;
+    height: 50;
 }
+
+.navbar .navbar-brand{
+    padding: 1rem 0;
+    display: block;
+    text-decoration: none;
+}
+a{
+    color: #e74c3c;
+}
+
+.navbar-brand {
+    font-family: 'Berkshire Swash', cursive;
+    font-size: 2.45rem;
+    color: #e74c3c;
+}
+.nav-link{
+    font-size: 1.1rem;
+    font-family: 'Berkshire Swash', cursive;
+}
+.dropdown-item{
+    color: #e74c3c;
+    font-family: 'Berkshire Swash', cursive;
+}
+.navbar-toggler{
+    background-color: #e74c3c;
+    color: wheat;
+}
+
+.banner {
+    align-items: center;
+    position: relative;
+    height: 100%;
+    color: #fff;
+    text-align: center;
+    z-index: 1;
+  }
