--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@ body {
     display: block;
     text-decoration: none;
 }
-a{
-    color: #e74c3c;
-}
 
 .navbar-brand {
     font-family: 'Berkshire Swash', cursive;
     font-size: 2.45rem;
+    color: #e74c3c;
+}
+a{
     color: #e74c3c;
 }
 .nav-link{
@@ -51,3 +51,12 @@ a{
     text-align: center;
     z-index: 1;
   }
+
+  .menu-block { margin-bottom: 30px; }
+  .menu-title { border-bottom: 3px solid #e0e6e3; margin-bottom: 36px; padding-bottom: 10px; }
+  .menu-content { border-bottom: 1px solid #e0e6e3; margin-bottom: 30px; }
+  .dish-content { margin-top: 12px; margin-bottom: 40px; }
+  .dish-meta { font-size: 12px; text-transform: uppercase; display: block; width: 210px; line-height: 1.7; }
+  .dish-title{ margin-bottom: 6px; font-size: 15px; text-transform: uppercase; font-weight: 500; position: relative; color: black;}
+  .well-block .dish-meta { width: 100%; }
+  .well-block .dish-price { font-size: 26px; color: #e03c23; font-weight: 500; font-family: 'Zilla Slab', serif; position: inherit; }
