--- a/style.css
+++ b/style.css
@@ -1,73 +1,159 @@
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
 body {
-    padding-top: 130px;
-    background: linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);
-  }
-  @media (max-width: 979px) {
-    body {
-      padding-top: 130px;
-    }
-  }
-
-.navbar{
-    width: 100;
-    height: 50;
+	padding-top: 130px;
+	background: linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);
 }
 
-.navbar .navbar-brand{
-    padding: 1rem 0;
-    display: block;
-    text-decoration: none;
+@media (max-width: 979px) {
+	body {
+		padding-top: 130px;
+	}
+}
+
+.navbar {
+	width: 100;
+	height: 50;
+}
+
+.navbar .navbar-brand {
+	padding: 1rem 0;
+	display: block;
+	text-decoration: none;
 }
 
 .navbar-brand {
-    font-family: 'Berkshire Swash', cursive;
-    font-size: 2.45rem;
-    color: #e74c3c;
-}
-a{
-    color: #e74c3c;
-}
-.nav-link{
-    font-size: 1.1rem;
-    font-family: 'Berkshire Swash', cursive;
-}
-.dropdown-item{
-    color: #e74c3c;
-    font-family: 'Berkshire Swash', cursive;
-}
-.navbar-toggler{
-    background-color: #e74c3c;
-    color: wheat;
+	font-family: 'Berkshire Swash', cursive;
+	font-size: 2.45rem;
+	color: #e74c3c;
 }
 
-.menu-block { margin-bottom: 30px; }
+.navbar-brand:hover {
+	transform: scale(0.9);
+	transition: all 1s;
+}
 
-.menu-title { border-bottom: 3px solid #e0e6e3; margin-bottom: 36px; padding-bottom: 10px; }
+a {
+	color: #e74c3c;
+}
 
-.menu-content { border-bottom: 1px solid #e0e6e3; margin-bottom: 30px; }
+.nav-link {
+	font-size: 1.1rem;
+	font-family: 'Berkshire Swash', cursive;
+}
 
-.dish-content { margin-top: 12px; margin-bottom: 40px; }
+.nav-link:hover {
+	transform: scaleY(1);
+	transition: all 1s;
+}
 
-.dish-meta { font-size: 12px; text-transform: uppercase; display: block; width: 210px; line-height: 1.7; }
+.dropdown-item {
+	color: #e74c3c;
+	font-family: 'Berkshire Swash', cursive;
+}
 
-.dish-title{ margin-bottom: 6px; font-size: 15px; text-transform: uppercase; font-weight: 500; position: relative; color: black;}
+.navbar-toggler {
+	background-color: #e74c3c;
+	color: wheat;
+}
 
-.well-block .dish-meta { width: 100%; }
+.menu-block {
+	margin-bottom: 30px;
+}
 
-.well-block .dish-price { font-size: 26px; color: #e03c23; font-weight: 500; font-family: 'Zilla Slab', serif; position: inherit; }
+.menu-title {
+	border-bottom: 3px solid #e0e6e3;
+	margin-bottom: 36px;
+	padding-bottom: 10px;
+  font-family: 'Berkshire Swash', cursive; 
+}
+
+.menu-content {
+	border-bottom: 1px solid #e0e6e3;
+	margin-bottom: 30px;
+}
+
+.dish-content {
+	margin-top: 12px;
+	margin-bottom: 40px;
+}
+
+.dish-meta {
+	font-size: 12px;
+	text-transform: uppercase;
+	display: block;
+	width: 210px;
+	line-height: 1.7;
+}
+
+.dish-title {
+	font-size: 17px;
+	text-transform: uppercase;
+	position: relative;
+}
+
+.well-block .dish-meta {
+	width: 100%;
+}
+
+.well-block .dish-price {
+	font-size: 26px;
+	color: #e03c23;
+	font-weight: 500;
+	font-family: 'Zilla Slab', serif;
+	position: inherit;
+}
 
 .jumbotron {
-    background-image: url("./images/restaurant.jpg");
-    background-size: cover;
-    height: 500px;
-    border-radius: 15px 15px 15px 15px;
-  }
-.jumbotron h2{
-      padding-top: 50px;
-      font-family: 'Berkshire Swash', cursive;
-      opacity: 65%;
-      font-size: 3rem;
+	background-image: url("./images/restaurant.jpg");
+	background-size: cover;
+	height: 500px;
+	border-radius: 15px 15px 15px 15px;
 }
+
+.jumbotron h2 {
+	padding-top: 50px;
+	font-family: 'Berkshire Swash', cursive;
+	opacity: 65%;
+	font-size: 3rem;
+}
+
+.jumbotron:hover {
+	transform: scale(0.95);
+	transition: all 2s;
+}
+
+.btn:hover{
+  transform: scale(0.95);
+	transition: all 0.5s;
+}
+
+#valid {
+	font-family: 'Arvo', serif;
+	color: rgb(31, 135, 31);
+	display: none;
+	font-size: 1.2rem;
+	font-weight: bold;
+}
+
+#invalid {
+	font-family: 'Arvo', serif;
+	color: rgb(184, 0, 0);
+	display: none;
+	font-size: 1rem;
+	font-weight: bold;
+}
+
+.users {
+	font-family: 'Arvo', serif;
+}
+
+.img-user {
+	border-radius: 15px 15px 15px 15px;
+}
+
+.page-title{
+  color: #e74c3c;
+	font-family: 'Berkshire Swash', cursive; 
+}
+
